--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     font-family: 'Overpass', sans-serif;
     font-size: 15px;
     display: flex;
+    color: hsl(217, 12%, 63%);
 }
 
 .wrapper {
@@ -22,10 +23,64 @@ body {
 }
 
 .card {
-    height: 500px;
-    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 400px;
+    width: 400px;
     margin: 0 auto;
-    background: hsl(213, 19%, 18%);
+    padding: 20px 40px;
+    background-color: hsl(213, 19%, 18%);
+    border-radius: 15px;
+    gap: 15px;
+}
+
+.star {
+    /* fuck an svg */
+    box-sizing: content-box;
+
+    width: 17px;
+    height: 16px;
+    padding: 15px;
+    border-radius: 50%;
+    background-color: hsla(216, 12%, 54%, 0.2);
+}
+
+.prompt {
+    font-size: 30px;
+    font-weight: 400;
+    color: hsl(0, 0%, 100%);
+}
+
+.description {
+    color: hsl(217, 12%, 63%);
+}
+
+.rating-buttons {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ratings {
+    text-align: center;
+    height: 50px;
+    width: 50px;
+    color: hsl(217, 12%, 63%);
+    border: none;
+    border-radius: 50%;
+    background-color: hsla(216, 12%, 54%, 0.2);
+}
+
+.submit {
+    padding: 15px 0;
+    color: hsl(0, 0%, 100%);
+    font-weight: 400;
+    letter-spacing: 2px;
+    border: none;
+    border-radius: 20px;
+    background-color: hsl(25, 97%, 53%);
 }
 
 .attribution {
