--- a/style.css
+++ b/style.css
@@ -1,95 +1,152 @@
-@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: 'Overpass', sans-serif;
-    font-size: 15px;
-    display: flex;
-    color: hsl(217, 12%, 63%);
+  width: 100vw;
+  height: 100vh;
+  font-family: "Overpass", sans-serif;
+  font-size: 15px;
+  display: flex;
+  color: hsl(217, 12%, 63%);
 }
 
 .wrapper {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    background-color: hsl(216, 12%, 8%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: hsl(216, 12%, 8%);
 }
 
 .card {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 400px;
-    width: 400px;
-    margin: 0 auto;
-    padding: 20px 40px;
-    background-color: hsl(213, 19%, 18%);
-    border-radius: 15px;
-    gap: 15px;
+  height: 400px;
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px 35px;
+  background: linear-gradient(45deg, hsl(212, 24%, 12%), hsl(213, 19%, 18%));
+  border-radius: 30px;
+  gap: 10px;
+}
+
+.ratings-screen {
+  visibility: visible;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.star-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 10px;
+  border-radius: 50%;
+  background-color: hsla(216, 12%, 54%, 0.2);
 }
 
 .star {
-    /* fuck an svg */
-    box-sizing: content-box;
-
-    width: 17px;
-    height: 16px;
-    padding: 15px;
-    border-radius: 50%;
-    background-color: hsla(216, 12%, 54%, 0.2);
+  /* fuck an svg */
+  width: 17px;
+  height: 16px;
 }
 
 .prompt {
-    font-size: 30px;
-    font-weight: 400;
-    color: hsl(0, 0%, 100%);
+  font-size: 30px;
+  font-weight: 400;
+  color: hsl(0, 0%, 100%);
 }
 
 .description {
-    color: hsl(217, 12%, 63%);
+  color: hsl(217, 12%, 63%);
 }
 
 .rating-buttons {
-    width: 100%;
-    height: fit-content;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: space-between;
 }
 
 .ratings {
-    text-align: center;
-    height: 50px;
-    width: 50px;
-    color: hsl(217, 12%, 63%);
-    border: none;
-    border-radius: 50%;
-    background-color: hsla(216, 12%, 54%, 0.2);
+  text-align: center;
+  height: 50px;
+  width: 50px;
+  color: hsl(217, 12%, 63%);
+  border: none;
+  border-radius: 50%;
+  background-color: hsla(216, 12%, 54%, 0.2);
+}
+
+.ratings:hover {
+  background-color: hsl(216, 12%, 54%);
+  color: hsl(0, 0%, 100%);
+}
+
+.active {
+  background-color: hsl(25, 97%, 53%);
+  color: hsl(0, 0%, 100%);
+}
+
+.active:hover {
+  background-color: hsl(25, 97%, 53%);
+  color: hsl(0, 0%, 100%);
 }
 
 .submit {
-    padding: 15px 0;
-    color: hsl(0, 0%, 100%);
-    font-weight: 400;
-    letter-spacing: 2px;
-    border: none;
-    border-radius: 20px;
-    background-color: hsl(25, 97%, 53%);
+  padding: 15px 0;
+  color: hsl(0, 0%, 100%);
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 2px;
+  border: none;
+  border-radius: 25px;
+  background-color: hsl(25, 97%, 53%);
+}
+
+.submit:hover {
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(25, 97%, 53%);
+}
+
+.thank-you-screen {
+  visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+
+.rating-choice {
+  display: flex;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 15px;
+  background-color: hsla(216, 12%, 54%, 0.2);
+  border-radius: 25px;
+  color: hsl(25, 97%, 53%);
 }
 
 .attribution {
-    font-size: 11px; 
-    text-align: center;
-    align-self: end; 
-    justify-self: start;
-    position: absolute;
+  font-size: 11px;
+  text-align: center;
+  align-self: end;
+  justify-self: start;
+  position: absolute;
 }
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
